# random_food_recipe

./: README.md  pyproject.toml  run.py
scripts/: data_model.py  utils.py
