[tool.poetry]
name = "random-food-recipe"
version = "0.1.0"
description = ""
authors = ["Dipam <dipam44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
youtube-transcript-api = "^0.4.1"
pydantic = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
