[tool.poetry]
name = "random-food-recipe"
version = "0.1.0"
description = ""
authors = ["Dipam <dipam44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
youtube-transcript-api = "^0.4.1"
pydantic = ">=2.0"
loguru = "^0.5.3"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
openai = "^1.14.2"
instructor = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
